InsureFlow360/force-app/main/default/objects/Customer__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <label>Date Of Birth</label>
    <inlineHelpText>Enter the customer's date of birth. The date must be in the past.</inlineHelpText>
    <type>Date</type>
</CustomField>