InsureFlow360/force-app/main/default/objects/Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <inlineHelpText>Enter a valid email address for the customer, such as user@example.com.</inlineHelpText>
    <type>Email</type>
</CustomField>