InsureFlow360/force-app/main/default/objects/Customer__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <inlineHelpText>Enter the customer's full legal name exactly as it appears on official documents.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>