InsureFlow360/force-app/main/default/objects/Customer__c/fields/KYC_status__c.field-meta.xml
<CustomField>
    <fullName>KYC_status__c</fullName>
    <label>KYC status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>