InsureFlow360/force-app/main/default/objects/Customer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <inlineHelpText>Enter a 10-digit phone number in digits only, for example 5551234567.</inlineHelpText>
    <type>Phone</type>
</CustomField>