InsureFlow360/force-app/main/default/objects/Customer__c/validationRules/DOB_not_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_not_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Date_Of_Birth__c)), Date_Of_Birth__c > TODAY())</errorConditionFormula>
    <errorDisplayField>Date_Of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be in the future.</errorMessage>
</ValidationRule>