InsureFlow360/force-app/main/default/objects/Customer__c/validationRules/Email_valid_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_valid_format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Email__c)), NOT(REGEX(Email__c, '^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$')))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Enter a valid email address.</errorMessage>
</ValidationRule>