InsureFlow360/force-app/main/default/objects/Customer__c/validationRules/Phone_10_Digits.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Phone__c)), NOT(REGEX(Phone__c, "[0-9]{10}")))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone must contain exactly 10 digits with no spaces or symbols.</errorMessage>
    <fullName>Phone_10_Digits</fullName>
</ValidationRule>